fix out of memory on user search